--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,6 +4,8 @@ on:
     types: [build-event]
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
+  
 jobs:
   update-gist:
     runs-on: ubuntu-latest
@@ -13,5 +15,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
-          TIMEZONE: Asia/Taipei
+          GIST_ID: ${{ secrets.GIST_ID }}
+          TIMEZONE: Asia/Seoul
